--- a/VRChat/13/1062613.html
+++ b/VRChat/13/1062613.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eboHKBBbv6ZhJsPHFCnChJ8DaPQY5n44QvVZC+EmGKQ="></script>
+    "oGuBPSaSUWEhXOoP5d/cEEynfRjrYD3G4YtIFfaC8+s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"けもみみおーこくの「ねこま」【Ver1.01】","description":"■Nekoma利用規約(KemomimiOukokuLICENSE)\nNekomaの利用規約は「KemomimiOukokuLICENSE」と同様となります。\nダウンロード時点での情報ではなく、WEBの情報が優先されます。\nhttps://nekomasu.wixsite.com/kemomimioukoku/character\n\nVRChat向けではありますが、ゲーム等のアプリケーションで使用されても問題ありません。\nただし、アプリケーションを有償で配布する場合は、公式のアプリケーションではない事を明示してください。\n法人規模でのデータ利用につきましては、個別にお問い合わせください。\n\n■説明\n以前、配布していたデータから細かい修正点を加えてあります。\nまた、魔法陣のテクスチャやVRM向けのトゥーンシェーダー使用時に必要なマスクなど…細かい付録があります。\n","url":"https://booth.pm/ja/items/1062613","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/cbf886eb-18da-4fa4-bd9a-a9e4f786c634/i/1062613/c1170262-b082-422f-814a-f8ff59bf8cac_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eboHKBBbv6ZhJsPHFCnChJ8DaPQY5n44QvVZC+EmGKQ="></script>
+    nonce="oGuBPSaSUWEhXOoP5d/cEEynfRjrYD3G4YtIFfaC8+s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1062613/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               759
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1062613/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               759
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
