--- a/VRChat/42/1061442.html
+++ b/VRChat/42/1061442.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dUj+Kh7YjBwBhVydVUbFanAzsVPUZT9DOrrEfx3yVCQ="></script>
+    "sIDjGraIFYTb2jq80VLrCjjZqTYszDb3eVSHUzf1FYs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"だんご大家族風　３Dモデル","description":"恋愛アドベンチャーゲーム「CLANNAD」のヒロインが好きな架空の国民的キャラクター、「だんご大家族」風の３Dモデルです。\n\nVRChatで個人的に使用する目的で作ったのでポリ数などは多めです。\n主にVRChatで使用する小物orアバターとして想定しています。\nunitypackageになっています。\nまばたきシェイプキーとアニメーションが入っています。","url":"https://booth.pm/ja/items/1061442","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1061442/8c44bcd4-de5c-4fb1-9921-ae1bdadb7fbe_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dUj+Kh7YjBwBhVydVUbFanAzsVPUZT9DOrrEfx3yVCQ="></script>
+    nonce="sIDjGraIFYTb2jq80VLrCjjZqTYszDb3eVSHUzf1FYs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1061442/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              383
+                              384
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1061442/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              383
+                              384
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
