--- a/VRChat/25/1062125.html
+++ b/VRChat/25/1062125.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Akkg6/mHnRwneFIHZqsm/DMvAgXCGQ8/GdirSa3Konc="></script>
+    "Qlo9phXV5pR+lKGPhb0CBcsF/6h2c4697GyhFVHfyhE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"トング","description":"パン屋さんに置いてありそうなトングの3Dモデルです。\nシェイプキーでつかめます。\nマテリアル設定済みです。(まんまるシェーダーを同梱)\n\n改変、商用等、自由にご利用いただけます。","url":"https://booth.pm/ja/items/1062125","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1062125/91884978-8623-4be6-8410-9d795f59830e_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Akkg6/mHnRwneFIHZqsm/DMvAgXCGQ8/GdirSa3Konc="></script>
+    nonce="Qlo9phXV5pR+lKGPhb0CBcsF/6h2c4697GyhFVHfyhE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1062125/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1062125/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
