--- a/VRChat/71/1061871.html
+++ b/VRChat/71/1061871.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zfmLrDfEPVeoRf4oSLEKeIJY41uuUNVVME0Z/LEf9BM="></script>
+    "RYnPMEUTmYwZQlM6btA9NXQBn1T1vCTVwkFpR7NlBak="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リュックサック","description":"リュックサックです。\nポリゴン数1172。\n\n山登りに、普段使いに、両手が開くから便利なリュック。\nあなたのアバター、収納スペースが足りなかったりしませんか？\n\nオーバーライドでものを出したいけど空中から出すのはちょっと…といったお悩みをお持ちのそこのあなた！\nこれさえあれば背中に手を回すだけでいろんなものが取り出し放題！\n大変快適な四次元リュックサックを是非お手元に！\n\n21/09/11 ワンコインマーケット出店に伴い新テクスチャになりました\n\n－－－－－ご注意－－－－－\n\nリュックサックです。思想や信仰等に関する表現はできないとは思いますが、禁止いたします。\n\n改変は自由です、利便性が少ないなぁ、容量が足りないなぁ、と思ったらあなた自身の手で使いやすくできるリュックです。\n\n販売商品のため再配布はご遠慮ください。\n\n著作権は製作者に帰属します。\n\n本モデルを利用したことによって発生したいかなる損害に対しても、作者は責任を負いません。\n\n\nあとは常識の範囲で、好きに背負って楽しんでください。\n\n\n不備や不具合、ご質問等ございましたらTwitter（ https://twitter.com/kamimk3 ）までどうぞ\n","url":"https://booth.pm/ja/items/1061871","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/23ccfef0-8531-4c36-9b34-431bf45abef2/i/1061871/e2da23ff-4cd9-41e3-be62-0b596c1080ce_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zfmLrDfEPVeoRf4oSLEKeIJY41uuUNVVME0Z/LEf9BM="></script>
+    nonce="RYnPMEUTmYwZQlM6btA9NXQBn1T1vCTVwkFpR7NlBak="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -171,7 +171,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1061871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               253
@@ -186,14 +186,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1061871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               253
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
